Add starting outline

--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Roadtrip</title>
+
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <link rel="stylesheet" href="./assets/style.css">
+
 </head>
 <body>
-    
+    <figure class="containerImg">
+        <img id="mainImg" src="https://i.imgflip.com/4s1l6z.jpg" alt="Are we There Yet?">
+        <div id="textImg">Are We There Yet?</div>
+    </figure>
+
+    <div id="containerInput">
+        <input class="input is-rounded" type="text" placeholder="Rounded input">
+        <input class="input is-rounded" type="text" placeholder="Rounded input">
+        <button class="button">Button</button>
+    </div>
+
+    <script src="./assets/script.js"></script>
 </body>
 </html>
+
+<!-- <div id="map"></div> -->
