--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300&display=swap" rel="stylesheet">
         
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">    
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="./assets/style.css">
 
@@ -25,11 +26,14 @@
     <div id="containerInput">
         <input class="input is-rounded" type="text" placeholder="Rounded input">
         <input class="input is-rounded" type="text" placeholder="Rounded input">
-        <button class="button">Button</button>
+        <button class="button" id="btn">Plan</button>
     </div>
 
     <!-- Google maps box -->
     <div id="map"></div>
+
+    <textarea class="textBox" readonly>Distance of Travel: </textarea>
+    <textarea class="textBox" readonly>Approximate Duration: </textarea>
 
     <script src="./assets/script.js"></script>
     <!-- google maps api url -->
