tried adding stylesheet to server

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <base href="/">
     <title>Roadtrip</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
@@ -11,12 +13,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300&display=swap" rel="stylesheet">
-        
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">    
+
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-    <link rel="stylesheet" href="./assets/style.css">
+    <link href="./assets/style.css" type="text/css">
 
 </head>
+
 <body>
     <figure class="containerImg">
         <img id="mainImg" src="https://i.imgflip.com/4s1l6z.jpg" alt="Are we There Yet?">
@@ -38,7 +41,8 @@
     <script src="./assets/script.js"></script>
     <!-- google maps api url -->
     <script async
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDPbIgaBr0ASK-ZxqMA15pdGV0m5ZP_zyI&callback=initMap">
-    </script>
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDPbIgaBr0ASK-ZxqMA15pdGV0m5ZP_zyI&callback=initMap">
+        </script>
 </body>
+
 </html>
