Changed path of css and js links

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-    <link href="./assets/style.css" type="text/css">
+    <link href="./public/assets/style.css" type="text/css">
 
 </head>
 
@@ -38,7 +38,7 @@
     <textarea class="textBox" readonly>Distance of Travel: </textarea>
     <textarea class="textBox" readonly>Approximate Duration: </textarea>
 
-    <script src="./assets/script.js"></script>
+    <script src="./public/assets/script.js"></script>
     <!-- google maps api url -->
     <script async
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDPbIgaBr0ASK-ZxqMA15pdGV0m5ZP_zyI&callback=initMap">
