Set up the server

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <base href="/">
     <title>Roadtrip</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
@@ -16,7 +15,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-    <link href="./public/assets/style.css" type="text/css">
+    <link rel="stylesheet" href="assets/style.css" type="text/css">
 
 </head>
 
@@ -38,10 +37,10 @@
     <textarea class="textBox" readonly>Distance of Travel: </textarea>
     <textarea class="textBox" readonly>Approximate Duration: </textarea>
 
-    <script src="./public/assets/script.js"></script>
+    <script src="assets/script.js"></script>
     <!-- google maps api url -->
     <script async
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDPbIgaBr0ASK-ZxqMA15pdGV0m5ZP_zyI&callback=initMap">
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDWpHE17jcCzscWWWAzcTc3wiMnH4ewdho&callback=initMap">
         </script>
 </body>
 
