Add ids to text area for duration and distance

--- a/public/index.html
+++ b/public/index.html
@@ -58,13 +58,13 @@
   <!-- Google maps box -->
   <div id="map"></div>
 
-  <textarea class="textBox" readonly>Distance of Travel: </textarea>
-  <textarea class="textBox" readonly>Approximate Duration: </textarea>
+  <textarea class="textBox" readonly id="distanceTravel">Distance in Miles: </textarea>
+  <textarea class="textBox" readonly id="durationTravel">Duration in Minutes: : </textarea>
 
   <script src="assets/script.js"></script>
   <!-- google maps api url -->
-  <script async
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDWpHE17jcCzscWWWAzcTc3wiMnH4ewdho&callback=initMap">
+  <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAf0jiz6FOtW0OVuD5novtLj19FL7PKpJk&callback=initMap">
     </script>
 </body>
 
