--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,11 @@
   <script src="assets/script.js"></script>
   <!-- google maps api url -->
   <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAf0jiz6FOtW0OVuD5novtLj19FL7PKpJk&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDWpHE17jcCzscWWWAzcTc3wiMnH4ewdho&callback=initMap">
+    </script>
+  <!-- google places api url-->
+  <script async
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDWpHE17jcCzscWWWAzcTc3wiMnH4ewdho&libraries=places&callback=initMap">
     </script>
 </body>
 
