--- a/public/index.html
+++ b/public/index.html
@@ -69,11 +69,33 @@
   <div class="container" id="topFiveContainer">
     <h2 class="title is-3" id="topFiveHeader">Top 5 Tourist Attractions:</h2>
     <ul id="topFiveList">
-      <li class="topFiveListItem">1</li>
-      <li class="topFiveListItem">2</li>
-      <li class="topFiveListItem">3</li>
-      <li class="topFiveListItem">4</li>
-      <li class="topFiveListItem">5</li>
+      <li class="topFiveListItem">
+        <div class="t5ListItemContainer">
+          <h3 class="t5LocationHeader">Location 1</h3>
+          <p class="address">Adress of location</p>
+          <p class="desc">Description</p>
+        </div>
+        <div class="t5ListItemContainer">
+          <h3 class="t5LocationHeader">Location 1</h3>
+          <p class="address">Adress of location</p>
+          <p class="desc">Description</p>
+        </div>
+        <div class="t5ListItemContainer">
+          <h3 class="t5LocationHeader">Location 1</h3>
+          <p class="address">Adress of location</p>
+          <p class="desc">Description</p>
+        </div>
+        <div class="t5ListItemContainer">
+          <h3 class="t5LocationHeader">Location 1</h3>
+          <p class="address">Adress of location</p>
+          <p class="desc">Description</p>
+        </div>
+        <div class="t5ListItemContainer">
+          <h3 class="t5LocationHeader">Location 1</h3>
+          <p class="address">Adress of location</p>
+          <p class="desc">Description</p>
+        </div>
+      </li>
     </ul>
   </div>
 
