--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,7 @@
   </div>
 
   <!-- Div containing the top 5 list -->
-  <div class="show" id="topFiveContainer">
+  <div class="hidden" id="topFiveContainer">
     <h2 class="title is-3" id="topFiveHeader">Top 5 Tourist Attractions:</h2>
     <ul id="topFiveList">
       <li class="topFiveListItem">
