started createListItems function

--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
 
   <!-- Div containing the top 5 list -->
   <div class="hidden" id="topFiveContainer">
-    <h2 class="title is-3" id="topFiveHeader">Top 5 Tourist Attractions:</h2>
+    <h2 class="title is-3" id="topFiveHeader">Must See Destinations:</h2>
     <ul id="topFiveList">
       <li class="topFiveListItem">
         <div class="t5ListItemContainer">
