Reformated the top 5 list

--- a/public/index.html
+++ b/public/index.html
@@ -75,21 +75,29 @@
           <p class="address">Adress of location</p>
           <p class="desc">Description</p>
         </div>
+      </li>
+      <li class="topFiveListItem">
         <div class="t5ListItemContainer">
           <h3 class="t5LocationHeader">Location 1</h3>
           <p class="address">Adress of location</p>
           <p class="desc">Description</p>
         </div>
+      </li>
+      <li class="topFiveListItem">
         <div class="t5ListItemContainer">
           <h3 class="t5LocationHeader">Location 1</h3>
           <p class="address">Adress of location</p>
           <p class="desc">Description</p>
         </div>
+      </li>
+      <li class="topFiveListItem">
         <div class="t5ListItemContainer">
           <h3 class="t5LocationHeader">Location 1</h3>
           <p class="address">Adress of location</p>
           <p class="desc">Description</p>
         </div>
+      </li>
+      <li class="topFiveListItem">
         <div class="t5ListItemContainer">
           <h3 class="t5LocationHeader">Location 1</h3>
           <p class="address">Adress of location</p>
