--- a/public/index.html
+++ b/public/index.html
@@ -67,41 +67,19 @@
   <div class="hidden" id="topFiveContainer">
     <h2 class="title is-3" id="topFiveHeader">Must See Destinations:</h2>
     <ul id="topFiveList">
-      <li class="topFiveListItem">
+      <!-- EXAMPLE STRUCTURE  
+        <li class="topFiveListItem">
         <div class="t5ListItemContainer">
           <h3 class="t5LocationHeader">Location 1</h3>
           <p class="address">Adress of location</p>
-          <p class="desc">Description</p>
+          <p class="rating">Description</p>
+          <div class="placePhotoContainer">
+            <img
+              src="https://images.unsplash.com/photo-1656376406179-1fbd9a8f4362?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=685&q=80"
+              class="placePhoto">
+          </div>
         </div>
-      </li>
-      <li class="topFiveListItem">
-        <div class="t5ListItemContainer">
-          <h3 class="t5LocationHeader">Location 1</h3>
-          <p class="address">Adress of location</p>
-          <p class="desc">Description</p>
-        </div>
-      </li>
-      <li class="topFiveListItem">
-        <div class="t5ListItemContainer">
-          <h3 class="t5LocationHeader">Location 1</h3>
-          <p class="address">Adress of location</p>
-          <p class="desc">Description</p>
-        </div>
-      </li>
-      <li class="topFiveListItem">
-        <div class="t5ListItemContainer">
-          <h3 class="t5LocationHeader">Location 1</h3>
-          <p class="address">Adress of location</p>
-          <p class="desc">Description</p>
-        </div>
-      </li>
-      <li class="topFiveListItem">
-        <div class="t5ListItemContainer">
-          <h3 class="t5LocationHeader">Location 1</h3>
-          <p class="address">Adress of location</p>
-          <p class="desc">Description</p>
-        </div>
-      </li>
+       -->
     </ul>
   </div>
 
