added basic styling to top 5 list

--- a/public/index.html
+++ b/public/index.html
@@ -71,8 +71,8 @@
         <li class="topFiveListItem">
         <div class="t5ListItemContainer">
           <h3 class="t5LocationHeader">Location 1</h3>
-          <p class="address">Adress of location</p>
-          <p class="rating">Description</p>
+          <p class="addressPara">Adress of location</p>
+          <p class="ratingPara">Description</p>
           <div class="placePhotoContainer">
             <img
               src="https://images.unsplash.com/photo-1656376406179-1fbd9a8f4362?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=685&q=80"
