--- a/public/index.html
+++ b/public/index.html
@@ -70,9 +70,10 @@
       <!-- EXAMPLE STRUCTURE  
         <li class="topFiveListItem">
         <div class="t5ListItemContainer">
-          <h3 class="t5LocationHeader">Location 1</h3>
-          <p class="addressPara">Adress of location</p>
-          <p class="ratingPara">Description</p>
+          <h3 class="t5LocationHeader">Location Name</h3>
+          <p class="ratingPara">Rating of Location</p>
+          <p class="totalRatingPara">Total Reviews</p>
+          <p class="addressPara">Address of location</p>
           <div class="placePhotoContainer">
             <img
               src="https://images.unsplash.com/photo-1656376406179-1fbd9a8f4362?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=685&q=80"
