added limit to how many searches are shown on list, will show the past 5 searches, added a clear history function, removed some console logs

--- a/public/index.html
+++ b/public/index.html
@@ -61,8 +61,8 @@
     </div>
     <div class="dropdown-menu" id="dropdown-menu" role="menu">
       <div class="dropdown-content">
-        <a class="dropdown-item">
-          No search history
+        <a class="dropdown-item" id = "first-child">
+          Clear All History
         </a>
       </div>
     </div>
@@ -77,16 +77,10 @@
   <!-- Google maps box -->
   <div id="map"></div>
 
-
-<<<<<<< HEAD
-  <textarea class="textBox" readonly id="distanceTravel">Distance in Miles: </textarea>
-  <textarea class="textBox" readonly id="durationTravel">Duration in Minutes: : </textarea>
-=======
   <div id="containerDistanceDuration">
     <textarea class="textarea has-fixed-size" readonly id="distanceTravel">Distance in Miles: </textarea>
     <textarea class="textarea has-fixed-size" readonly id="durationTravel">Duration in Minutes: </textarea>
   </div>
->>>>>>> ac7c97a284434b32e0a07177f47cf605e48e29e2
 
   <script src="assets/script.js"></script>
   <!-- google maps api url -->
